Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44556

qstorageinfo_unix.cpp wouldbn't build on Solaris

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.4.2
    • 5.4.0
    • Core: I/O
    • None
    • 6f87e1b526273aba16c44cbfa2b96934b4ee007d

    Description

      1. it's missing include <sys/statvfs.h>
      2. @@ -201,17 +202,17 @@
         
         inline QString QStorageIterator::rootPath() const
         {
        -    return QFile::decodeName(mnt->mnt_mountp);
        +    return QFile::decodeName(mnt.mnt_mountp);
         }
         
         inline QByteArray QStorageIterator::fileSystemType() const
         {
        -    return QByteArray(mnt->mnt_fstype);
        +    return QByteArray(mnt.mnt_fstype);
         }
         
         inline QByteArray QStorageIterator::device() const
         {
        -    return QByteArray(mnt->mnt_mntopts);
        +    return QByteArray(mnt.mnt_mntopts);
         }
        

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mandriver Dmitry Shachnev
            PetrS Petr Sumbera
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes