qstorageinfo_unix.cpp: Fix build on Solaris

Task-number: QTBUG-44556
Change-Id: I22d791011866175ca88de88c0b1a7c4d9d397d8f
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 6f87e1b526273aba16c44cbfa2b96934b4ee007d https://github.com/qt/qtbase/commit/6f87e1b526273aba16c44cbfa2b96934b4ee007d